# simple_call

./: flake.nix
.github/workflows/: tty_client.yaml
android_client/: build.gradle.kts  settings.gradle.kts
android_client/app/: build.gradle.kts  google-services.json
android_client/app/libs/: opus.aar
android_client/app/src/androidTest/java/com/mdario/simplecall/: ExampleInstrumentedTest.kt  OpusInstrumentedTest.kt
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/java/com/example/simplecall/: CallActivity.kt  MainActivity.kt
android_client/app/src/main/java/com/example/simplecall/api/: FetchApi.kt  FetchProvider.kt
android_client/app/src/main/java/com/example/simplecall/data/: AppDatabase.kt  MainViewModel.kt  UrlDAO.kt  UrlModel.kt  UrlRepository.kt
android_client/app/src/main/java/com/example/simplecall/ui/: MainScreen.kt
android_client/app/src/main/java/com/mdario/simplecall/: CallActivity.kt  MainActivity.kt
android_client/app/src/main/res/drawable/: ic_launcher_foreground.xml
android_client/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
android_client/app/src/test/java/com/mdario/simplecall/: ExampleUnitTest.kt
android_client/gradle/wrapper/: gradle-wrapper.properties
server/: Cargo.toml
server/src/: call_coordinator.rs  main.rs  room_coordinator.rs  tests.rs  utils.rs
tty_client/: Cargo.toml
tty_client/src/: call.rs  cli_args.rs  coordination.rs  main.rs  utils.rs
tty_client/src/call/: mod.rs  receive.rs  send.rs
(+17 files in other folders)
