[package]
name = "simple_call_client_tty"
description = "A simple client to call using the opus protocol."
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
cpal = "0.15"
nnnoiseless = "0.5.1"
opus = { git = "https://github.com/Avi-D-coder/opus-rs" }
sha2 = "0.10.9"

[profile.release]
strip = true
